hphp/hack/test/typecheck/nonnull/fc_enum_of_nonnull.php.exp
File "fc_enum_of_nonnull.php", line 3, characters 11-17:
Enums must be int or string, not a nonnull value (Typing[4024])
